# haskellVCSGUI

./: .gitignore  .travis.yml  README  cabal.project  sources.txt  vcsguis.lkshs  vcsguis.lkshw
travis/: build.sh
vcsgui/: vcsgui.cabal  vcsgui.cabal~
vcsgui/data/: guiCommonAskpass.glade  guiCommonCommit.glade  guiCommonConflictsResolved.glade  guiCommonFilesInConflict.glade  guiCommonLog.glade  guiCommonMergeTool.glade  guiCommonSetupRepo.glade  guiCommonSetupRepo_withCheckboxes.glade  guiCommonSetupRepo_withCheckboxes_v2.glade  guiGit.glade  guiSvnAskpass.glade  guiSvnCheckout.glade
vcsgui/src/: Main.hs  VCSGui.hs
vcsgui/src/VCSGui/: Commit.hs  Common.hs  Git.hs  Mercurial.hs  Svn.hs  Types.hs
vcsgui/src/VCSGui/Common/: Commit.hs  ConflictsResolved.hs  Error.hs  ExceptionHandler.hs  FilesInConflict.hs  GtkHelper.hs  Helpers.hs  Log.hs  MergeTool.hs  MergeToolGUI.hs  Process.hs  SetupConfig.hs  Types.hs
vcsgui/src/VCSGui/Git/: Commit.hs  Gui.hs  Helpers.hs  Log.hs  Pull.hs
vcsgui/src/VCSGui/Mercurial/: Commit.hs  Log.hs
vcsgui/src/VCSGui/Svn/: AskPassword.hs  Checkout.hs  Commit.hs  Helper.hs  Log.hs  Update.hs
vcsgui/src/exe/askpass/: Main.hs
