name: vcsgui
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any,
               base -any, base -any, directory -any, directory -any, gtk -any,
               haskell98 -any, mtl -any, mtl -any, vcswrapper -any,
               vcswrapper -any, mtl -any, mtl -any, haskell98 -any, gtk -any,
               directory -any, directory -any, base -any, base -any,
               directory -any, directory -any, gtk -any, haskell98 -any, mtl -any,
               mtl -any, vcswrapper -any, vcswrapper -any, mtl -any, mtl -any,
               haskell98 -any, gtk -any, directory -any, directory -any, base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files: guiGit.glade guiCommonCommit.glade
data-dir: data
extra-source-files:
extra-tmp-files:
exposed-modules: VCSGui.Common.SetupConfig VCSGui.Git.Commit
                 VCSGui.Git.Log VCSGui.Common.Commit VCSGui.Git.Gui
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSGui.Svn VCSGui.Svn.Log VCSGui.Svn.Checkout
               VCSGui.Svn.Commit VCSGui.Common.Types VCSGui.Common.GtkHelper
               VCSGui.Common.Log
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: vcsgui
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSGui.Svn VCSGui.Svn.Log VCSGui.Svn.Checkout
               VCSGui.Svn.Commit VCSGui.Common.Types VCSGui.Common.GtkHelper
               VCSGui.Common.Log
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: