name: vcsgui
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, directory -any, vcswrapper -any,
               gtk -any, haskell98 -any, mtl -any, MissingH -any, MissingH -any,
               mtl -any, haskell98 -any, gtk -any, vcswrapper -any,
               directory -any, base -any, base -any, directory -any,
               vcswrapper -any, gtk -any, haskell98 -any, mtl -any, MissingH -any,
               MissingH -any, mtl -any, haskell98 -any, gtk -any, vcswrapper -any,
               directory -any, base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files: guiCommonLog.glade guiCommonCommit.glade
            guiSvnCheckout.glade guiCommonSetupRepo.glade
data-dir: data
extra-source-files:
extra-tmp-files:
exposed-modules: VCSGui.Svn VCSGui.Git VCSGui.Common
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSGui.Git.Helpers VCSGui.Common.ExceptionHandler
               VCSGui.Git.Gui VCSGui.Git.Log VCSGui.Git.Commit VCSGui.Svn.Checkout
               VCSGui.Svn.Log VCSGui.Svn.Commit VCSGui.Common.GtkHelper
               VCSGui.Common.Log VCSGui.Common.SetupConfig VCSGui.Common.Error
               VCSGui VCSGui.Common.Types VCSGui.Common.Commit Paths_vcsgui
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: vcsgui
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSGui.Git.Helpers VCSGui.Common.ExceptionHandler
               VCSGui.Git.Gui VCSGui.Git.Log VCSGui.Git.Commit VCSGui.Svn.Checkout
               VCSGui.Svn.Log VCSGui.Svn.Commit VCSGui.Common.GtkHelper
               VCSGui.Common.Log VCSGui.Common.SetupConfig VCSGui.Common.Error
               VCSGui VCSGui.Common.Types VCSGui.Common.Commit Paths_vcsgui
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: