name: vcsgui
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: filepath -any, MissingH -any, base -any,
               directory -any, gtk -any, haskell98 -any, mtl -any,
               vcswrapper -any, 
               gtk -any, process -any

stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files: guiCommonCommit.glade guiCommonLog.glade
            guiCommonSetupRepo.glade guiSvnCheckout.glade
            guiCommonAskpass.glade guiSvnAskpass.glade
            guiCommonFilesInConflict.glade guiCommonMergeTool.glade
            guiCommonConflictsResolved.glade
data-dir: data
extra-source-files:
extra-tmp-files:
exposed-modules: VCSGui.Common VCSGui.Git VCSGui.Svn
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSGui.Common.Process
               VCSGui.Common.ConflictsResolved VCSGui.Common.MergeTool
               VCSGui.Common.FilesInConflict VCSGui.Git.Pull VCSGui.Svn.Update
               VCSGui.Svn.AskPassword VCSGui VCSGui.Svn.Log VCSGui.Svn.Checkout
               VCSGui.Svn.Commit VCSGui.Git.Log VCSGui.Git.Helpers VCSGui.Git.Gui
               VCSGui.Git.Commit VCSGui.Common.Types VCSGui.Common.Log
               VCSGui.Common.GtkHelper VCSGui.Common.ExceptionHandler
               VCSGui.Common.SetupConfig VCSGui.Common.Error VCSGui.Common.Commit
               Paths_vcsgui
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: vcsgui
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSGui.Common.Process
               VCSGui.Common.ConflictsResolved VCSGui.Common.MergeTool
               VCSGui.Common.FilesInConflict VCSGui.Git.Pull VCSGui.Svn.Update
               VCSGui.Svn.AskPassword VCSGui VCSGui.Svn.Log VCSGui.Svn.Checkout
               VCSGui.Svn.Commit VCSGui.Git.Log VCSGui.Git.Helpers VCSGui.Git.Gui
               VCSGui.Git.Commit VCSGui.Common.Types VCSGui.Common.Log
               VCSGui.Common.GtkHelper VCSGui.Common.ExceptionHandler
               VCSGui.Common.SetupConfig VCSGui.Common.Error VCSGui.Common.Commit
               Paths_vcsgui
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: vcsgui-askpass
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src/exe/askpass src
other-modules: VCSGui.Common.Process
               VCSGui.Common.ConflictsResolved VCSGui.Common.MergeTool
               VCSGui.Common.FilesInConflict VCSGui.Git.Pull VCSGui.Svn.Update
               VCSGui.Svn.AskPassword Paths_vcsgui VCSGui.Common.GtkHelper
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: